testsuite/tests/qualifieddo/should_fail/qdofail004.stderr

qdofail004.hs:10:5: error:
    Not in scope: ‘P.fail’
    Suggested fix:
      Perhaps you want to remove ‘fail’ from the explicit hiding list
      in the import of ‘Prelude’ (qdofail004.hs:3:1-33).
